--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "linkstate": "^1.0.1",
     "preact": "^8.1.0",
     "preact-compat": "^3.16.0",
+    "preact-redux": "^2.0.1",
     "react-router-dom": "^4.1.1",
+    "redux": "^3.7.0",
+    "redux-thunk": "^2.2.0",
     "webpack": "^2.6.1",
     "webpack-dev-server": "^2.4.5",
     "whatwg-fetch": "^2.0.3"
