--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "the project for preact、preact-redux and preact-router of app",
   "main": "index.js",
   "scripts": {
-    "start": "babel-node ./node_modules/.bin/webpack-dev-server --inline --progress --colors --open",
-    "dev": "babel-node ./node_modules/.bin/webpack --watch",
-    "build": "babel-node ./node_modules/.bin/webpack --optimize-minimize"
+    "start": "cross-env NODE_ENV=development babel-node devServer.js --open --inline",
+    "dev": "cross-env NODE_ENV=development babel-node devServer.js",
+    "build": "cross-env NODE_ENV=production babel-node ./node_modules/.bin/webpack --optimize-minimize",
+    "testBuild": "cross-env NODE_ENV=production babel-node ./node_modules/.bin/webpack-dev-server --open --inline"
   },
   "repository": {
     "type": "git",
@@ -19,7 +20,6 @@
   },
   "homepage": "",
   "dependencies": {
-    "@super-fe/BdrainfnEventDispatch": "^1.0.1",
     "babel-cli": "^6.24.1",
     "babel-loader": "^7.0.0",
     "babel-plugin-transform-react-jsx": "^6.24.1",
@@ -36,6 +36,7 @@
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "cross-env": "^5.1.5",
     "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.0.7",
     "preact-router-redux": "^4.1.0",
